更新密钥存储文档

--- a/01 - 文档/04 - 高级.md
+++ b/01 - 文档/04 - 高级.md
@@ -435,3 +435,131 @@ homeassistant:
         - camera.front_porch
     ```
 
+## 密钥存储
+
+所有的API密钥和密码都存储在 configuration.yaml 中。configuration.yaml 是一个纯文本文件，所有具有访问权限的用户都可以查看和编译。通过使用`!secret`指令可以把API密钥和密码从 configuration.yaml 文件中分离。如果对配置文件进行了拆分后，存储API密钥和密码的文件将变成多个。
+
+使用`!secret`指令，会在Home Assistant的配置目录中建立一个 secret.yaml 文件，原理类似于拆分配置。
+
+配置示例：
+
+- 原始配置
+
+    ```
+    http:
+      api_password: YOUR_PASSWORD
+    ```
+
+- 拆分配置
+
+  `configuration.yaml`
+
+    ```
+  http:
+    api_password: !secret http_password
+    ```
+
+  `secret.yaml`
+
+  ```
+  http_password: YOUR_PASSWORD
+  ```
+
+当配置文件拆分为多个文件时，密钥文件可能会在子目录中配置。密钥加载顺序如下：
+
+- 首先加载同一文件夹的密钥文件。
+- 加载父目录的密钥文件，检索到 configuration.yaml 所在目录为止。
+
+检查密钥的加载文件有两种方法：
+
+- 在secret.yaml文件添加如下代码，将密钥的检索目录显示在Home Assistant日志中
+
+  ```
+  logger: debug
+  ```
+
+- 使用指令查看密钥检索目录
+
+  ```
+  $ hass --script check_config --secrets
+  ```
+
+## 组件模板
+
+组件模板是Home Assistant的高级功能。利用组件模板可以获取组件的状态，控制进出系统的信息，例如：
+
+- 在某种情况下推送信息
+- 处理原始数据
+- 自动化
+
+### 模板结构
+
+Home Assistant中的模板引用[Jinja2](http://jinja.pocoo.org/)模板引擎，可以在[Jinja2文档](http://jinja.pocoo.org/docs/dev/templates/)中学习语法。
+
+使用YAML多行字符串来定义模板，可以保持清晰的概述，示例：
+
+```
+script:
+  msg_who_is_home:
+    sequence:
+      - service: notify.notify
+        data_template:
+          message: >
+            {% if is_state('device_tracker.paulus', 'home') %}
+              Ha, Paulus is home!
+            {% else %}
+              Paulus is at {{ states('device_tracker.paulus') }}.
+            {% endif %}
+```
+
+[Jinja2](http://jinja.pocoo.org/)支持的操作类型
+
+- [数学运算](http://jinja.pocoo.org/docs/dev/templates/#math)
+- [比较](http://jinja.pocoo.org/docs/dev/templates/#comparisons)
+- [逻辑](http://jinja.pocoo.org/docs/dev/templates/#logic)
+
+### 模板变量
+
+Home Assistant内置许多模板变量。
+
+- 迭代`states`将产生按照组件ID字母顺序排列的组件状态。
+- 迭代`states.domain`将产生该域内按组件ID字母顺序排列的组件状态。
+- `states.sensor.temperature`返回指定类别的状态。
+- `states('device_tracker.paulus')`返回指定组件的状态或在状态未知的情况下返回`unknown`。
+- `is_state('device_tracker.paulus', 'home')`判断指定实体状态是否为指定状态。
+- `state_attr('device_tracker.paulus', 'battery')`返回指定实体的属性值，若不存在则返回None。
+- `is_state_attr('device_tracker.paulus', 'battery', 40)`判读指定实体的属性值是否为指定值（示例中为数值）。
+- `now()`所在时区的时间。
+  - `now().second` - 秒
+  - `now().minute ` - 分
+  - `now().hour` - 小时
+  - `now().day` - 日
+  - `now().month` - 月
+  - `now().year` - 年
+  - `now().weekday()` 
+  - `now().isoweekday()`
+- `utcnow()`UTC时间。
+  - `utcnow().second` - 秒
+  - `utcnow().minute ` - 分
+  - `utcnow().hour` - 小时
+  - `utcnow().day` - 日
+  - `utcnow().month` - 月
+  - `utcnow().year` - 年
+  - `utcnow().weekday()` 
+  - `utcnow().isoweekday()`
+- `as_timestamp()`将DateTime对象或字符串转换为UNIX时间戳。
+- `distance()`测量home、实体、坐标之间的距离。
+- `closest`找到最近的实体。
+- `float`以浮点数的格式输出。
+- `strptime(string, format)`根据格式将字符串解析为时间，依据Python的时间[格式](https://docs.python.org/3.6/library/datetime.html#strftime-and-strptime-behavior)。
+- `log(value, base)`取输入值的对数。省略基数时，默认基数为`e`(自然对数）。可以用作过滤器
+- `sin(value)`返回输入值的正弦值。可以用作过滤器
+- `cos(value)`返回输入值的余弦值。可以用作过滤器
+- `tan(value)`返回输入值的正切值。可以用作过滤器
+- `sqrt(value)`返回输入值的平方根。可以用作过滤器
+- `e`数字常熟，约为2.71828。
+- `pi`数学常数，约3.14159。
+- `tau`数学常数，约为6.28318。
+- 
+
+
