更新模板文档

--- a/01 - 文档/04 - 高级.md
+++ b/01 - 文档/04 - 高级.md
@@ -551,7 +551,7 @@ Home Assistant内置许多模板变量。
 - `distance()`测量home、实体、坐标之间的距离。
 - `closest`找到最近的实体。
 - `float`以浮点数的格式输出。
-- `strptime(string, format)`根据格式将字符串解析为时间，依据Python的时间[格式](https://docs.python.org/3.6/library/datetime.html#strftime-and-strptime-behavior)。
+- `strptime(string, format)`根据格式将字符串解析为时间，支持[Python时间格式](https://docs.python.org/3.6/library/datetime.html#strftime-and-strptime-behavior)。
 - `log(value, base)`取输入值的对数。省略基数时，默认基数为`e`(自然对数）。可以用作过滤器
 - `sin(value)`返回输入值的正弦值。可以用作过滤器
 - `cos(value)`返回输入值的余弦值。可以用作过滤器
@@ -560,6 +560,35 @@ Home Assistant内置许多模板变量。
 - `e`数字常熟，约为2.71828。
 - `pi`数学常数，约3.14159。
 - `tau`数学常数，约为6.28318。
-- 
+- 过滤器`round(x)`将输入的数字四舍五入为`x`位小数。
+- 过滤器`timestamp_local`将UNIX时间戳转换为本地时间。
+- 过滤器`timestamp_utc`将UNIX时间戳转换为UTC时间。
+- 过滤器`timestamp_custom(format_string, local_boolean)`将UNIX时间戳转换为自定义的时间格式。默认使用本地时间，支持[Python时间格式](https://docs.python.org/3.6/library/datetime.html#strftime-and-strptime-behavior)。
+- 过滤器`max`获取序列中的最大项。
+- 过滤器`min`获取序列中的最小项。
+- 过滤器`regex_match(string, find, ignorecase=FALSE)`使用regex（正则表达式）匹配字符串开头的find（查找）表达式。
+- 过滤器`regex_search(string, find, ignorecase=FALSE)`使用regex（正则表达式）匹配字符串任何位置的find（查找）表达式。
+- 过滤器`regex_replace(string, find='', replace='', ignorecase=False)`使用regex（正则表达式）将字符串替换为find（查找）表达式。
+- 过滤器`regex_findall_index(string, find='', index=0, ignorecase=False)`使用regex（正则表达式）在字符串中寻找find（查找）表达式内容，将与index（指数)匹配的结果返回，返回内容为数组。
+- 过滤器`bitwise_and(value_one, value_two)`使两个值执行按位和（&）运算。
+- 过滤器`bitwise_or(value_one, value_two)`使两个值执行按位或（|）运算。
+
+> 如果模板使用的`entity_id`以数字开头。例如:`states.device_tracker.2008_gmc`。必须使用括号语法来避免因`entity_id`不正确呈现而导致的错误。在给出的示例中，设备跟踪器的正确语法是：`states.device_tracker['2008_gmc']`。
+
+### 使用模板
+
+#### 运算符的优先级
+
+过滤器（`|`)优先于除括号之外的所有运算符。示例：
+
+```
+{{ states('sensor.temperature') | float / 10 | round(2) }}
+```
+
+- 示例的含义为传感器温度四舍五入到小数点后两位然后除以10。
+
+#### 模板的测试
+
+在Web UI中的`<>`（模板开发人员工具）中测试模板的可用性和编辑的正确性，左边输入模板代码，右边显示模板结果。
 
 
